added ner endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 services:
-  web:
-    build: .
+  service:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     ports:
       - "8080:80"
+    volumes:
+      - "./:/code"
