--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  service:
+  pixelmixer-nlp:
     build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - "9191:80"
+      - "9191:9191"
     volumes:
       - "./:/code"
